@@ -29,6 +29,8 @@ i18n.wizard.access.description = <html><p align=justify>Specify a list of ports/
     SSH server you would specify <i>tcp/22</i></p></html>
 i18n.wizard.cancel = Cancel
 i18n.wizard.create = Create
+i18n.wizard.generate.rijndael.key = Generate Rijndael key
+i18n.wizard.generate.hmac.key = Generate HMAC key
 
 i18n.save.as = Save as
 
