@@ -29,6 +29,8 @@ i18n.wizard.access.description = <html><p align=justify>Sp\u00e9cifier une liste
     <br>Par exemple, si vous voulez obtenir l'acc\u00e8s au serveur SSH vous d\u00e9finirez <i>tcp/22</i></p></html>
 i18n.wizard.cancel = Annuler
 i18n.wizard.create = Cr\u00e9er
+i18n.wizard.generate.rijndael.key = G\u00e9n\u00e9rer une clef Rijndael
+i18n.wizard.generate.hmac.key = G\u00e9n\u00e9rer une clef HMAC
 
 i18n.save.as = Sauvegarder sous
 
